--- a/css/style.css
+++ b/css/style.css
@@ -361,31 +361,13 @@ body::-webkit-scrollbar {
 }
 
 .roadmap_items {
-    position: relative;
     padding-left: 45px;
     margin-top: 25px;
+    border: 1px solid red;
 }
 
-.mark {
-    position: absolute;
-    top: 5px;
-    left: 10px;
-    width: 15px;
-    height: 15px;
-    border-radius: 50%;
-    background-color: var(--onyx);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.mark::before {
-    content: '';
-    position: absolute;
-    width: 6px;
-    height: 6px;
-    border-radius: 50%;
-    background-color: var(--vegas-gold);
+.roadmap_items li {
+    margin-bottom: 20px;
 }
 
 .roadmap_items h2 {
