--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,9 @@ body {
     font-family: 'Poppins', sans-serif;
     font-size: 62.5%;
     padding: 15px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 body::-webkit-scrollbar {
