--- a/css/style.css
+++ b/css/style.css
@@ -72,33 +72,6 @@ body::-webkit-scrollbar { width: 4px; }
     Reused style
 -----------------------------*/
 
-.items_list { display: flex; }
-
-.items_list {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    margin-top: var(--margin-15);
-    margin-bottom: var(--margin-15);
-}
-
-.items_list div p {
-    font-size: 0.6rem;
-    text-transform: uppercase;
-    color: var(--light-gray-70);
-}
-
-.items_list h3, address {
-    font-size: 0.8rem;
-    color: var(--light-gray)
-}
-
-.items_list h1 {
-    color: var(--white-2);
-    font-size: 1.2rem;
-    margin-left: 4px;
-}
-
 .title h1 {
     color: var(--white-2);
     font-size: 1.4rem;
@@ -173,6 +146,31 @@ body::-webkit-scrollbar { width: 4px; }
     margin-bottom: var(--margin-15);
 }
 
+.items_list {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-top: var(--margin-15);
+    margin-bottom: var(--margin-15);
+}
+
+.items_list > div p {
+    font-size: 0.6rem;
+    text-transform: uppercase;
+    color: var(--light-gray-70);
+}
+
+.items_list h3, address {
+    font-size: 0.8rem;
+    color: var(--light-gray)
+}
+
+.items_list h1 {
+    color: var(--white-2);
+    font-size: 1.2rem;
+    margin-left: 4px;
+}
+
 .icons {
     width: 30px;
     height: 30px;
@@ -184,7 +182,7 @@ body::-webkit-scrollbar { width: 4px; }
     justify-content: center;
     align-items: center;
     border-top: 1px solid var(--border-color);
-    border-left: 1px solid var(--border-color);
+    border-left: 2px solid var(--border-color);
     margin-right: 15px;
 }
 
@@ -502,6 +500,13 @@ textarea::-webkit-resizer { display: none; }
 
 @media (min-width: 580px) {
 
+    body {
+        padding: 60px 30px;
+        transition: var(--transition-1);
+    }
+
+    #main_container { max-width: 548px; }
+
     /* button style */
 
     #btn {
@@ -509,12 +514,68 @@ textarea::-webkit-resizer { display: none; }
         color: var(--vegas-gold);
     }
     
-    #btn i {
-        display: none;
+    #btn i { display: none; }
+
+    #btn span { display: block; }
+
+    /* Sidebar Style */
+    
+    #sidebar { max-height: 180px; }
+
+    #profile_header { padding: 15px 0 15px 15px; }
+
+    #profile_title h1 { font-size: 1.7rem; }
+
+    #profile_title h3 {
+        font-size: 0.9rem;
+        width: 140px;
     }
 
-    #btn span {
-        display: block;
+    #profile_img {
+        width: 100px;
+        height: 100px;
+        border-radius: 25px;
     }
     
+    .profile_info_more { padding: 15px 0 15px 0; }
+
+    .items_list {
+        margin-top: 20px;
+        margin-bottom: 20px;
+    }
+
+    .items_list > div p { font-size: 0.8rem; }
+
+    .items_list h3, address { font-size: 1rem; }
+
+    .icons {
+        width: 45px;
+        height: 45px;
+        border-radius: 13px;
+    }
+
+    .icons img {
+        width: 20px;
+        height: 20px;
+    }
+
+    #social_icons { margin-top: 10px; }
+
+    #social_icons img {
+        width: 30px;
+        height: 30px;
+    }
+
+    #sidebar.active { max-height: 564px; }
+
+    /* Navgation bar style */
+
+    #navbar ul li a {
+        font-size: 0.9rem;
+        padding: 15px;
+    }
+
+    /*Section style*/
+
+    .title h1 { font-size: 1.9rem; }
 }
