--- a/css/style.css
+++ b/css/style.css
@@ -73,6 +73,9 @@ body {
     font-family: 'Poppins', sans-serif;
     font-size: 62.5%;
     padding: 15px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 body::-webkit-scrollbar { width: 7px; }
@@ -94,7 +97,6 @@ body::-webkit-scrollbar-thumb {
 -----------------------------*/
 
 main {
-    margin: 15px 12px;
     margin-bottom: 75px;
     min-width: 259px;
   }
@@ -348,7 +350,7 @@ main {
     Skills section
 -----------------------------*/
 
-.skills_container header {
+.skills_container h1 {
     font-size: 1.2rem;
     font-weight: 700;
     color: var(--light-gray);
@@ -358,7 +360,7 @@ main {
 .my_skills ul {
     display: flex;
     flex-direction: column;
-    gap: 8px;
+    gap: 20px;
 }
 
 .skills_items {
@@ -399,14 +401,14 @@ main {
     font-size: var(--text-size);
 }
 
-.timeline_list p:first-of-type {
+.timeline_list span {
     color: var(--vegas-gold);
     margin-top: 5px;
     margin-bottom: 5px;
     font-size: var(--subtext-size);
 }
 
-.timeline_list p:last-of-type {
+.timeline_list p {
     color: var(--light-gray);
     font-size: var(--text-size);
     font-weight: 400;
@@ -466,7 +468,7 @@ main {
 
     main {
         max-width: 580px;
-        margin-top: 55px;
+        margin: 45px 15px 80px 15px;
     }
 
 
@@ -475,6 +477,7 @@ main {
     #sidebar {
         max-height: 180px;
         margin-bottom: 30px;
+        border-radius: 20px;
     }
 
     .border_separator { margin: 30px 0 30px 0; }
@@ -483,19 +486,93 @@ main {
 
     #profile { padding: 30px; }
 
-    #sidebar.active { max-height: 585px; }
+    #profile h1 { font-size: 1.5rem; }
+
+    #profile h3 {
+        font-size: 0.8rem;
+        width: 120px;
+    }
+
+    .icon_box {
+        width: 46px;
+        height: 46px;
+        border-radius: 12px;
+        font-size: 20px;
+    }
+
+    .contact_info span { font-size: 0.7rem; }
+
+    .contact_info p, address { font-size: 0.9rem; }
+
+    .social_icons a {
+        font-size: 1.3rem;
+    }
+
+    #sidebar.active { max-height: 579px; }
 
     /*---------- Responsive style button ------------*/
 
-    #btn { width: 120px; }    
+    #btn { 
+        width: 125px; 
+        padding: 20px;
+    }    
 
     #btn span { 
         display: block; 
         color: var(--vegas-gold);
-        font-size: 0.8rem;
+        font-size: 0.75rem;
+        font-weight: 500;
     }
 
     #btn ion-icon { display: none; }
 
     .profile_img img { width: 120px; }
+
+    /*About me section*/
+
+.content_container { padding: 25px; }
+
+.title h1 {
+    font-size: 1.8rem;
+}
+
+.title::after {
+    padding: 1px;
+    width: 40px;
+}
+
+.about_me_content p {
+    font-size: 1rem;
+}
+
+.about_me_content p:not(:last-of-type) {
+    margin-top: 35px;
+}
+
+.skills_container h1 {
+    font-size: 1.6rem;
+    margin: 20px 0 15px 0;
+}
+
+
+/*----------------------------
+    Resume responsive style
+-----------------------------*/
+
+.resume_titles h1 { font-size: 1.6rem; }
+
+.timeline_items:not(:last-child)::before { left: -22px; }
+
+.timeline_items::after { left: -25px; }
+
+.timeline_items h2 { font-size: 1rem; }
+
+.timeline_items span { 
+    display: inline-block;
+    font-size: 0.8rem;
+    margin: 5px 0 5px 0;
+}
+
+.timeline_items p { font-size: 0.9rem; }
+
 }
